--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ footer span {
 
 footer {
   margin-top: 20px;
-  border-top: 5px solid hsla(122, 83%, 49%, 1);
+  border-top: 5px solid hsla(323, 97%, 56%, 1);
 }
 
 ul {
@@ -279,7 +279,11 @@ ul {
   }
 
   p {
-    width: 40ch;
+    max-width: 60ch;
+  }
+
+  #section_1 p {
+    padding-left: 40px;
   }
 
   #logo {
@@ -297,7 +301,7 @@ ul {
   #section_1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-bottom: 20px;
+    padding-bottom: 100px;
   }
 
   #section_2 {
@@ -336,12 +340,11 @@ ul {
     border-style: solid;
     border-width: 7px;
     border-color: var(--persian-rose);
-  }
-
-  .nyeste_wrapper {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+    aspect-ratio: 2850/1588;
+    width: 900px;
+    max-width: 1100px;
+    height: auto;
+    max-height: auto;
   }
 
   header {
@@ -370,5 +373,26 @@ ul {
 
   .so_me {
     display: flex;
+  }
+
+  #konku_img {
+    aspect-ratio: 4032/3024;
+    max-width: 100%;
+  }
+  .nyeste_wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 20px;
+  }
+
+  .nyeste_img {
+    height: auto;
+    width: 300px;
+  }
+
+  .nyeste {
+    display: grid;
+    place-items: center;
+    background-color: var(--malachite);
   }
 }
