--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -144,4 +144,13 @@ article {
   #videoer section {
     display: flex;
   }
+
+  .lille {
+    width: 100px;
+  }
+
+  #galleri h2 {
+    display: flex;
+    justify-content: center;
+  }
 }
