--- a/style_portfolio.css
+++ b/style_portfolio.css
@@ -73,6 +73,10 @@ article {
   padding-bottom: 30px;
 }
 
+iframe {
+  border: none;
+}
+
 @media (min-width: 600px) {
   #medlemmer {
     display: grid;
@@ -143,6 +147,7 @@ article {
 
   #videoer section {
     display: flex;
+    gap: 15px;
   }
 
   .lille {
